--- a/ShadowPeople/ShadowPeople.vcxproj
+++ b/ShadowPeople/ShadowPeople.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="FreeList.cpp" />
     <ClCompile Include="game\GameLogic.cpp" />
     <ClCompile Include="graphics\Graphics.cpp" />
+    <ClCompile Include="graphics\Image.cpp" />
     <ClCompile Include="graphics\ShaderManager.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
@@ -146,7 +147,6 @@
     <ClCompile Include="rendering\Camera.cpp" />
     <ClCompile Include="rendering\DebugRenderer.cpp" />
     <ClCompile Include="rendering\GeometryCache.cpp" />
-    <ClCompile Include="rendering\Image.cpp" />
     <ClCompile Include="rendering\ImageBuffers.cpp" />
     <ClCompile Include="rendering\ImGuiRenderer.cpp" />
     <ClCompile Include="rendering\MaterialCache.cpp" />
@@ -185,6 +185,7 @@
     <ClInclude Include="graphics\Descriptors.hpp" />
     <ClInclude Include="graphics\DX11Graphics.hpp" />
     <ClInclude Include="graphics\Graphics.hpp" />
+    <ClInclude Include="graphics\Image.hpp" />
     <ClInclude Include="graphics\ShaderManager.hpp" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
@@ -199,7 +200,6 @@
     <ClInclude Include="rendering\Camera.hpp" />
     <ClInclude Include="rendering\DebugRenderer.hpp" />
     <ClInclude Include="rendering\GeometryCache.hpp" />
-    <ClInclude Include="rendering\Image.hpp" />
     <ClInclude Include="rendering\ImageBuffers.hpp" />
     <ClInclude Include="rendering\ImGuiRenderer.hpp" />
     <ClInclude Include="rendering\MaterialCache.hpp" />
